# 25_CPP

./: .gitignore  CMakeLists.txt  CMakeLists_bak.txt  ClassDiagram.cd  qt1.sln  qt1.vcxproj  qt1.vcxproj.filters
assets/: assets.qrc
src/: GameProgress.h  Intro.cpp  Intro.h  MyGame.cpp  MyGame.h  main.cpp
src/FallingController/: fallingcontroller.cpp  fallingcontroller.h
src/Items/: Item.h  Mountable.cpp  Mountable.h  fallable.cpp  fallable.h
src/Items/Armors/: Armor.cpp  Armor.h  BulletArmor.cpp  BulletArmor.h  NormalArmor.cpp  NormalArmor.h
src/Items/Characters/: Character.cpp  Character.h  Link.cpp  Link.h  link2.cpp  link2.h  myfish.cpp  myfish.h  smallfish.cpp  smallfish.h
src/Items/Drugs/: bandage.cpp  bandage.h  drug.cpp  drug.h  medbag.cpp  medbag.h  medical.cpp  medical.h
src/Items/Figure/: Figure.cpp  Figure.h  FigureA.cpp  FigureA.h  figurea_hand.cpp  figurea_hand.h  figurea_kneedown.cpp  figurea_kneedown.h  figureb.cpp  figureb.h  figureb_hand.cpp  figureb_hand.h  figureb_kneedown.cpp  figureb_kneedown.h  myfishfig.cpp  myfishfig.h
src/Items/Maps/: Battlefield.cpp  Map.cpp  grass.cpp  grass.h  ice.cpp  ice.h
src/Items/Weapons/: Rifle.cpp  Rifle.h  Weapon.cpp  Weapon.h  ball.cpp  ball.h  ballhand.cpp  ballhand.h  bullet.cpp  bullet.h  knife.cpp  knife.h  sniper.cpp  sniper.h
src/Scenes/: BattleScene.cpp  BattleScene.h  Platform.cpp  Platform.h  Scene.cpp  Scene.h
src/UI/: HealthBar.cpp  HealthBar.h
